# drf-ai-image-labeler

./: .default.env  .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  TODO.md  default.env  docker-compose.yml  gunicorn.conf.py  pyproject.toml
app/: admin.py  apps.py  filters.py  models.py  serializers.py  urls.py  views.py
app/management/commands/: init_s3_storage.py
app/migrations/: 0001_initial.py  0002_label_image.py  0003_alter_image_labels.py  0004_label_created_at.py  0005_alter_label_options.py
app/services/: __init__.py  ollama_client.py  s3_storage_service.py  vlm_client_service.py  vlm_provider.py
app/services/providers/: __init__.py  ollama.py
config/: asgi.py  urls.py  wsgi.py
config/settings/: base.py  custom.py  dev.py  prod.py
tests/: __init__.py
tests/unit/: __init__.py  conftest.py  django_settings.py  fixtures.py  pytest.ini  test_rest_api.py
tests/unit/services/: test_vlm_client_service.py  test_vlm_client_service_flows.py  test_vlm_provider.py
tests/unit/services/providers/: test_ollama.py
