[project]
name = "drf-ai-image-labeler"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "cimex9", email = "armenak.shakaryan@proton.me"},
]
dependencies = [
    "django>=6.0.2",
    "djangorestframework>=3.16.1",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "django-storages[s3]>=1.14.6",
    "psycopg[binary]>=3.3.2",
    "celery>=5.6.2",
    "redis>=7.1.0",
    "Pillow>=12.1.0"
]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.scripts]
dc = { shell="docker compose", env_file=".env" }

server = "python manage.py runserver"
migrate = "python manage.py migrate"
makemigrations = "python manage.py makemigrations"
shell = "python manage.py shell"

isort = "isort ."
lint = "ruff check ."
lint-fix = "ruff check . --fix"

[tool.isort]
skip = [
    "venv",
    ".venv",
    "config",
]
skip_glob = [
    "**/migrations/**",

]

[tool.ruff]
line-length = 100
target-version = "py313"
fix = false

exclude = [
    "venv",
    ".venv",
    "config",
    "**/migrations/**",
]
[tool.ruff.lint]
select = [
    "E",   # style errors
    "F",   # logical errors
    "I",   # import sorting
    "B",   # bugbear (likely bugs)
    "UP",  # pyupgrade
]
[tool.ruff.lint.isort]
known-first-party = ["app", "config"]

[dependency-groups]
dev = [
    "isort>=7.0.0",
]
test = [
    "pytest>=9.0.2",
    "allure-pytest>=2.15.3",
]
lint = [
    "ruff>=0.15.0",
]
