[project]
name = "drf-ai-image-labeler"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "cimex9", email = "armenak.shakaryan@proton.me"},
]
dependencies = [
    "django>=6.0.2",
    "djangorestframework>=3.16.1",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "django-storages[s3]>=1.14.6",
    "psycopg[binary]>=3.3.2",
    "celery>=5.6.2",
    "redis>=7.1.0",
    "Pillow>=12.1.0",
    "drf-yasg>=1.21.14",
    "django-filter>=25.2",
    "langchain>=1.2.15",
    "langchain-ollama>=1.1.0",
    "gunicorn>=23.0.0",
    "whitenoise>=6.12.0",
]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.scripts]
# Run `pdm run --list` for a nice view of commands.

dc.help = "Utility PDM script which runs `docker compose` after populating environment variables from .env file."
dc.cmd = "docker compose"
dc.env_file = ".env"

server.help = "Start Django development server. Also serves static files."
server.cmd = "python manage.py runserver"

gunicorn.help = "Start Gunicorn production server with 4 workers, 120s timeout, and logging to stdout."
gunicorn.cmd = "gunicorn config.wsgi:application --bind 0.0.0.0:8000 --workers 4 --timeout 120 --access-logfile - --error-logfile -"

migrate.help = "Django 'migrate' command. Applies migration files to update database schema. Manages all apps."
migrate.cmd = "python manage.py migrate"

makemigrations.help = "Django 'makemigrations' command. Creates new migration files for apps."
makemigrations.cmd = "python manage.py makemigrations"

shell.help = "Runs Django interactive shell. Install 'dev' group dependencies to run an 'ipython' shell."
shell.cmd = "python manage.py shell"

isort.help = "Runs `isort` command in the project root with configurations from pyproject.toml."
isort.cmd = "isort ."

lint.help = "Runs `ruff` linter in the project root with configurations from pyproject.toml and only outputs the results."
lint.cmd = "ruff check ."

lint-fix.help = "Runs `ruff` linter in the project root with configurations from pyproject.toml and applies fixes to the issues."
lint-fix.cmd = "ruff check . --fix"

pre-commit-install.help = "Installs .pre-commit-config.yaml configurations into local .git/hooks directory."
pre-commit-install.cmd = "pre-commit install"

# custom Django management commands
init_s3_storage.help = "Initialize MinIO bucket and policies. Idempotent action."
init_s3_storage.cmd = "python manage.py init_s3_storage"

# tests
unit_tests.help = "Run all unit tests under tests/unit directory using pytest."
unit_tests.cmd = "pytest tests/unit"

[tool.isort]
skip = [
    "venv",
    ".venv",
    "config",
]
skip_glob = [
    "**/migrations/**",

]

[tool.ruff]
line-length = 100
target-version = "py313"
fix = false

exclude = [
    "venv",
    ".venv",
    "config",
    "**/migrations/**",
]
[tool.ruff.lint]
select = [
    "E",   # style errors
    "F",   # logical errors
    "I",   # import sorting
    "B",   # bugbear (likely bugs)
    "UP",  # pyupgrade
]
[tool.ruff.lint.isort]
known-first-party = ["app", "config"]

[dependency-groups]
dev = [
    "isort>=7.0.0",
    "pre-commit>=4.5.1",
    "ipython>=9.10.0",
]
test = [
    "pytest>=9.0.2",
    "allure-pytest>=2.15.3",
    "pytest-django>=4.12.0",
]
lint = [
    "ruff>=0.15.0",
]
